o Updated code base for 64bit address target. (64bit builds of current binaries not made or tested yet.) 
o Updated system lib for 64bit Win OS compatibility.

16/08/10
o Added syntactical sugar for functions.  'function <name>(<parms>){<statements>}' Thanks 39ster.

17/06/11
o Fixed gmMachine::GetTypeId(), invalid string returned. Thanks Tiok.
o Changed project and workspaces from MSVC 8 (2005) to MSVC 10 (2010 SP1)
  To compile the Windows based examples & utils, you will need at least 'MS Visual C++ 2010 Express SP1' freely downloadable from Microsoft.
  To run the Windows examples you will need VC10 compatible runtimes installed, The '.Net Framework' redistributables or 'Windows Update' will provide these.
  (Left VC6 and VC8 projects and workspaces in for now.  Debugger still relies on MFC which is not supported by 2005 Express edition.)
o Changed #define in MSVC platform file to _M_X64 which is correct 64bit build macro. Also renamed another misspelled macro.

29/06/11
o Add 64bit MSVC build configurations for GME

2/10/11
o Fixed GC root scan. (PS. Failed attempt)
o Increased GMTHREAD_MAXBYTESIZE to allow samples to run in 64bit
o Fixed gmTable 64bit gmVariable equality test.
o Fixed byte code generator. 64bit was mixing 32 and 64 bit patched addresses.

3/10/11
o Fixed GC root scan to ignore persistent objects.

4/10/11
o Fixed GC tricolor invariance wasn't preserved with local object transfer of ownership.

7/10/11
o Fixed GC (Another attempt)

13/01/12
o Improved syntactical sugar for functions. Thanks HenryTran.
 
10/02/12
o Added experimental project gmddotnet (gmDebuggerNet) which is gmd ported to C# .Net from C++ MFC.
  This was simply an experiment, this example debugger is as identically terrible as the original version.
  
12/05/12
o Fixed Fork stack growth bug. Thanks funkbot.

09/06/12
o Add back ++,-- pre inc, dec operators (Experimental, code restored from v0.9)

18/05/13
o Reordered GC descruction sequence to avoid Write Barrier mis-fire.